--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,19 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
+.terraform.lock.*
 
 # Crash log files
 crash.log
+crash.*.log
 
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
 # example.tfvars
+*.tfvars
+*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -27,3 +31,10 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Terraform generated local files
+kube*.yaml
